{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 21,
  "lineage": "8d33b4f8-8a0a-58b6-5ca9-b9947e56e898",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-010066e6bfd750432",
            "arn": "arn:aws:ec2:sa-east-1:672106412583:instance/i-00c949ec42ab56ba2",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00c949ec42ab56ba2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0bfc9096354472186",
            "private_dns": "ip-10-0-1-102.sa-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.102",
            "public_dns": "ec2-15-228-187-44.sa-east-1.compute.amazonaws.com",
            "public_ip": "15.228.187.44",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05784c99e5f4fb501",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0cbe0c16d0316b391",
            "tags": {
              "Name": "atividade3-web"
            },
            "tags_all": {
              "Name": "atividade3-web"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0097846bab38d2515"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amzn2",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:672106412583:internet-gateway/igw-0b7cc39a544d35cac",
            "id": "igw-0b7cc39a544d35cac",
            "owner_id": "672106412583",
            "tags": {
              "Name": "atividade3-igw"
            },
            "tags_all": {
              "Name": "atividade3-igw"
            },
            "vpc_id": "vpc-0bf0babe3f476a116"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:672106412583:loadbalancer/app/atividade3-alb/6fb6482d7d0062b9",
            "arn_suffix": "app/atividade3-alb/6fb6482d7d0062b9",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "atividade3-alb-232753874.sa-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:sa-east-1:672106412583:loadbalancer/app/atividade3-alb/6fb6482d7d0062b9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "atividade3-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08e8f255fbc4674bc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0cb795c4267118562"
              },
              {
                "subnet_id": "subnet-0cbe0c16d0316b391"
              }
            ],
            "subnets": [
              "subnet-0cb795c4267118562",
              "subnet-0cbe0c16d0316b391"
            ],
            "tags": {
              "Name": "atividade3-alb"
            },
            "tags_all": {
              "Name": "atividade3-alb"
            },
            "vpc_id": "vpc-0bf0babe3f476a116",
            "xff_header_processing_mode": "append",
            "zone_id": "Z2P70J7HTTTPLU"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:672106412583:listener/app/atividade3-alb/6fb6482d7d0062b9/58b1b03d406bc4df",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:sa-east-1:672106412583:targetgroup/atividade3-tg/9dcbce1785d5e9e7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:672106412583:listener/app/atividade3-alb/6fb6482d7d0062b9/58b1b03d406bc4df",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:sa-east-1:672106412583:loadbalancer/app/atividade3-alb/6fb6482d7d0062b9",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.app_alb",
            "aws_lb_target_group.tg",
            "aws_security_group.alb_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:672106412583:targetgroup/atividade3-tg/9dcbce1785d5e9e7",
            "arn_suffix": "targetgroup/atividade3-tg/9dcbce1785d5e9e7",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:672106412583:targetgroup/atividade3-tg/9dcbce1785d5e9e7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "atividade3-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "atividade3-tg"
            },
            "tags_all": {
              "Name": "atividade3-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0bf0babe3f476a116"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "attach_web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:sa-east-1:672106412583:targetgroup/atividade3-tg/9dcbce1785d5e9e7-20250829200433492000000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:sa-east-1:672106412583:targetgroup/atividade3-tg/9dcbce1785d5e9e7",
            "target_id": "i-00c949ec42ab56ba2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_instance.web",
            "aws_lb_target_group.tg",
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_ami.amzn2",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:672106412583:route-table/rtb-0a8a9601f509b1e10",
            "id": "rtb-0a8a9601f509b1e10",
            "owner_id": "672106412583",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b7cc39a544d35cac",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "atividade3-public-rt"
            },
            "tags_all": {
              "Name": "atividade3-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf0babe3f476a116"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0826c98c514d8791c",
            "route_table_id": "rtb-0a8a9601f509b1e10",
            "subnet_id": "subnet-0cbe0c16d0316b391"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0be079cf37756c047",
            "route_table_id": "rtb-0a8a9601f509b1e10",
            "subnet_id": "subnet-0cb795c4267118562"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:672106412583:security-group/sg-08e8f255fbc4674bc",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08e8f255fbc4674bc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "atividade3-alb-sg",
            "name_prefix": "",
            "owner_id": "672106412583",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "atividade3-alb-sg"
            },
            "tags_all": {
              "Name": "atividade3-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf0babe3f476a116"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:672106412583:security-group/sg-0097846bab38d2515",
            "description": "EC2 security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0097846bab38d2515",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP from ALB",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-08e8f255fbc4674bc"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "atividade3-ec2-sg",
            "name_prefix": "",
            "owner_id": "672106412583",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "atividade3-ec2-sg"
            },
            "tags_all": {
              "Name": "atividade3-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf0babe3f476a116"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:672106412583:security-group/sg-06ecd576fa61c27b8",
            "description": "RDS security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06ecd576fa61c27b8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "MySQL from EC2 SG",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0097846bab38d2515"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "atividade3-rds-sg",
            "name_prefix": "",
            "owner_id": "672106412583",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "atividade3-rds-sg"
            },
            "tags_all": {
              "Name": "atividade3-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bf0babe3f476a116"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "aws_security_group.ec2_sg",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:672106412583:subnet/subnet-0c7a187eb6753ac80",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7a187eb6753ac80",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "672106412583",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "atividade3-private-0",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "atividade3-private-0",
              "Tier": "private"
            },
            "vpc_id": "vpc-0bf0babe3f476a116"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:672106412583:subnet/subnet-067ad9ae3eff84849",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-067ad9ae3eff84849",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "672106412583",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "atividade3-private-1",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "atividade3-private-1",
              "Tier": "private"
            },
            "vpc_id": "vpc-0bf0babe3f476a116"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "0",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:672106412583:subnet/subnet-0cbe0c16d0316b391",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cbe0c16d0316b391",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "672106412583",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "atividade3-public-0",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "atividade3-public-0",
              "Tier": "public"
            },
            "vpc_id": "vpc-0bf0babe3f476a116"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": "1",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:672106412583:subnet/subnet-0cb795c4267118562",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0cb795c4267118562",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "672106412583",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "atividade3-public-1",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "atividade3-public-1",
              "Tier": "public"
            },
            "vpc_id": "vpc-0bf0babe3f476a116"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:672106412583:vpc/vpc-0bf0babe3f476a116",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f8fadef2fdef5df7",
            "default_route_table_id": "rtb-0ac3e3c74701aff65",
            "default_security_group_id": "sg-0106c6bb90e2f496d",
            "dhcp_options_id": "dopt-0ad8e7d61e716c662",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bf0babe3f476a116",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ac3e3c74701aff65",
            "owner_id": "672106412583",
            "tags": {
              "Name": "atividade3-vpc"
            },
            "tags_all": {
              "Name": "atividade3-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}